--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
     <title>I am a title!</title>
     </head>
     <body>
-        The HTML content goes here.
+        <h1> Hi this is my blog. </h1>
     </body>
 </html>
