--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     </head>
     <body>
         <h1> Hi this is my blog. </h1>
+        <img src="https://octodex.github.com/images/vinyltocat.png">
     </body>
 </html>
